fixed gap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,11 +37,10 @@ html,body{
     overflow-y: hidden;
     margin: 0;
     padding: 0;
-    background-color: red;
+    background-image: url('https://cdn.pixabay.com/photo/2022/03/27/03/16/islamic-7093979_1280.jpg');
 }
 
 .main{
-    background-image: url('https://cdn.pixabay.com/photo/2022/03/27/03/16/islamic-7093979_1280.jpg');
     background-size: cover;
     text-align: center;
     width: 100vw;
